--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <htmL>
   <head>
     <style>
-      .parent{
+      .parent,body,html{
         display: table;
         height: 100%;
         width: 100%;
