--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
-<!doctype html>
-<htmL>
-  <head>
-    <style>
-      .parent,body,html{
-        display: table;
-        height: 100%;
-        width: 100%;
-      }
-      .child{
-        display: table-cell;
-        vertical-align: middle;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="parent">
-      <div class="child">
-        <h2>Megha Tomar</h2>
-      </div>
-    </div>
-  </body>
-</htmL>
+<!doctype <!DOCTYPE html>
+<html>
+<head>
+  <title>Megha Tomar</title>
+</head>
+<body>
+  <div class="child">
+    <h1>Megha Tomar</h1>
+    <h3>Coming soon..</h3>
+  </div>
+</body>
+</html>
