--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Megha Tomar</title>
-  <link rel="stylesheet" href="tarpit27.github.io/custom.css"/>
+  <link rel="stylesheet" href="meghatomar.me/custom.css"/>
 </head>
 <body>
   <div class="child">
