--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<div class="child">
-			<h1>Hello World!</h1>
+			<h1>Megha Tomar</h1>
+			<h3>Coming soon..</h3>
 		</div>
 	</body>
 </html>
