--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="stylesheets/custom.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	</head>
 	<body>
-		<div class="child">
+		<div class="jumbotron">
 			<h1>Megha Tomar</h1>
-			<h3>Coming soon..</h3>
 		</div>
 	</body>
 </html>
