--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="sytlesheet" href="stylesheets/custom.css">
 	</head>
 	<body>
-		<div class="jumbotron">
-			<h1>Megha Tomar</h1>
+		<div class="jumbotron bg-1 text-center">
+			<h3>Megha Tomar</h3>
 		</div>
 	</body>
 </html>
