--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="sytlesheet" href="stylesheets/custom.css">
+		<link rel="stylesheet" href="stylesheets/custom.css">
 	</head>
 	<body>
 		<div class="jumbotron bg-1 text-center">
