modified: index.html, custom.css; added: me.jpg

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div class="jumbotron bg-1 text-center">
+			<img src="me.jpg" class="img-circle img-responsive" style="display: inline;"/>
 			<h2>Megha Tomar</h2>
 		</div>
 	</body>
