--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="stylesheets/custom.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">-->
+        <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="jumbotron bg-1 text-center">
