--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
         <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<div class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<div class="navbar-brand">
+						<a href="#">Me</a>
+					</div>
+				</div>
+				<div class="collapse navbar-collapse navbar-right" id="menu">
+					<li>About me</li>
+					<li>Skills</li>
+				</div>
+			</div>
+		</div>
 		<div class="jumbotron bg-1 text-center">
 			<img src="images/me.jpg" class="img-circle img-responsive" style="display: inline;"/>
 			<h2>Megha Tomar</h2>
