modified index.html, custom.css

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 						<a href="#">Me</a>
 					</div>
 				</div>
-				<div class="collapse navbar-collapse navbar-right" id="menu">
-					<li>About me</li>
-					<li>Skills</li>
+				<div class="collapse navbar-collapse" id="menu">
+					<ul class="nav navbar-nav navbar-right">
+						<li>About me</li>
+						<li>Skills</li>
+					</ul>
 				</div>
 			</div>
 		</div>
