--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="stylesheets/custom.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,14 +18,12 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<div class="navbar-brand">
-						<a href="#">Me</a>
-					</div>
+					<a class="navbar-brand" href="#">Me</a>
 				</div>
 				<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav navbar-right">
-						<li>About me</li>
-						<li>Skills</li>
+						<li><a href="#">About me</a></li>
+						<li><a href="#">Skills</a></li>
 					</ul>
 				</div>
 			</div>
